--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "api-fatos-historicos",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "20.16.0"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "start": "node ./dist/server.js"
+    "build": "tsup src",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.6.1",
+    "tsup": "^8.3.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
