feat: minificar arquivos

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsup src",
+    "build": "tsup src --minify",
     "start": "node dist/server.js"
   },
   "keywords": [],
